Fix ssr for about section, align in community table, test sourcemaps

--- a/components/leaderboard/Leaderboard.module.scss
+++ b/components/leaderboard/Leaderboard.module.scss
@@ -160,6 +160,7 @@
 
   th {
     white-space: nowrap;
+    line-height: 28px;
   }
 
   th span {
@@ -200,6 +201,7 @@
 
   th {
     white-space: nowrap;
+    line-height: 28px;
   }
 
   th span {
